--- a/src/app/exercice2/exercice2.component.html
+++ b/src/app/exercice2/exercice2.component.html
@@ -3,5 +3,5 @@
 <input #myinput type="text" placeholder="text" (click)="add()">
 <br />
 <br />
-<span> valeur de l'input : {{ valeur?.nativeElement?.value }}</span>
+<span> valeur de l'input : {{ valeur }}</span>
 <hr>
